--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #5892CC;
+    background-color: #BADFFA;
     color: #2C3E50;
 
 }
@@ -28,10 +28,11 @@ body {
     border-radius: 25px;
 }
 .blog-content{
-    background: #000000;
+    background: #2C3E50;
     color: #375B7F;
     font-size: 25px;
     border-radius: 25px;
+    margin:5%;
 }
 #blog-content{
     background: #000000;
@@ -72,8 +73,8 @@ width: 10rem;
 
 .parallax {
     /* The image used */
-    background-image: url("space.jpg");
 
+ background: rgba(200, 200, 200, 0.6);
     /* Set a specific height */
     height: 500px;
 
@@ -82,4 +83,123 @@ width: 10rem;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.cover {
+
+  position: absolute;
+
+  top: 0;
+
+  left: 0;
+
+  z-index: 100;
+
+
+
+  width: 100%;
+
+  height: 100%;
+
+
+
+  .hi {
+
+    position: absolute;
+
+    top: 50%;
+
+    left: 50%;
+
+    transform: translate(-50%,-50%);
+
+
+
+    color: #fff;
+
+
+
+    font-family: 'Roboto Slab', serif;
+
+    font-size: 24px;
+
+    line-height: 26px;
+
+    text-align: center;
+
+
+
+    span {
+
+      color: #ff0;
+
+      cursor: pointer;
+
+      text-decoration: underline;
+
+    }
+    em {
+
+      font-style: normal;
+      &.hidden {
+        display: none;
+      }
+    }
+  }
+}
+.tv {
+
+  position: absolute;
+
+  top: 0;
+
+  left: 0;
+
+  z-index: -1;
+
+
+
+  width: 100%;
+
+  height: 100%;
+
+
+
+  overflow: hidden;
+
+
+
+  .screen {
+
+    position: absolute;
+
+    top: 0;
+
+    right: 0;
+
+    bottom: 0;
+
+    left: 0;
+
+    z-index: 1;
+
+
+
+    margin: auto;
+
+
+
+    opacity: 0;
+
+    transition: opacity .5s;
+
+
+
+    &.active {
+
+      opacity: 1;
+
+    }
+
+  }
+
 }
